fix: integrate item model
